--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -15,16 +15,19 @@
 	title = {The ups and downs of ignorance},
 	url = {https://doi.org/10.1007/s11050-024-09226-3},
 	year = {2025},
-	bdsk-url-1 = {https://doi.org/10.1007/s11050-024-09226-3}}
+volume = {33},
+  number = {},
+  pages = {1--41},
+	}
 	
 @article{Antilla2024,
 	author = {Maria Aloni and Aleksi Anttila and Fan Yang},
 journal =  {Notre Dame Journal of Formal Logic},
 	title = {State-based Modal Logics for Free Choice},
-  volume = {},
-  number = {},
-  pages = {},
-	external = {https://arxiv.org/abs/2305.11777},
+  volume = {65},
+  number = {4},
+  pages = {367--413},
+	doi ={https://doi.org/10.1215/00294527-2024-0027},
 	year = {2024}
 }
 
