--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -1,8 +1,48 @@
 ---
 ---
 
+@inproceedings{Klochowiczetal2025,
+  author = {Tomasz Klochowicz and Fabian Schlotterbeck and Oliver Bott and Sonia Ramotowska and Maria Aloni},
+booktitle = {Proceedings of CogSci 2025 (accepted)},
+  title = {Neglect zero: evidence from priming across constructions},
+  year = {2025},
+  slides = {},
+doi = { }
+}
 
-@article{Deagnoetal2024,
+@inproceedings{Bottetal2024,
+  author = {Oliver Bott and Fabian Schlotterbeck and Tomasz Klochowicz and Sonia Ramotowska and Maria Aloni},
+booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29   (accepted)},
+  title = {Neglect-Zero Effects in the Interpretation of Quantifiers and Disjunction},
+  year = {2024},
+  slides = {},
+doi = { }
+}
+
+@inproceedings{Yanal2024,
+  author = {Jialiang Yan and Maria Aloni and Fenrong Liu},
+booktitle = {Proceedings of   AWPL 2024 (accepted)},
+  title = {Perspective Shifts: Formalizing Epistemic Might in Multi-agent Models.},
+  year = {2024},
+  slides = {},
+doi = { }
+}
+
+
+@article{DeganoAloni2025,  
+	author = {Degano, Marco and  Aloni, Maria},
+	doi = { },
+	id = {Degano2025},
+	isbn = { },
+	journal = {Linguistics and Philosophy (accepted)},
+	title = {How to be (non-)specific},
+ volume = { },
+  number = { },
+  pages = { }, 
+	year = {2025}
+	}
+
+@article{Deganoetal2025,
 	abstract = {Plain disjunctive sentences, such as The mystery box contains a blue ball or a yellow ball, typically imply that the speaker does not know which of the two disjuncts is true. This is known as an ignorance inference. We can distinguish between two aspects of this inference: the negated universal upper bound part (i.e., the speaker is uncertain about each disjunct), which we call uncertainty, and the existential lower bound part (i.e., the speaker considers each disjunct possible), which we call possibility. In the traditional approach, uncertainty is derived as a primary implicature, from which possibility follows. In this paper, we report on two experiments using a sentence-picture verification task based on the mystery box paradigm that challenge the traditional implicature approach. Our findings show that possibility can arise without uncertainty, and we thus call for a reevaluation of the traditional view of disjunction and ignorance inferences. Our experimental findings are related to similar results involving disjunction in embedded contexts and pave the way for alternative theories that can account for the observed patterns of inference derivation in a unified fashion. We discuss how recent implicature and non-implicature theories can account for the derivation of existential lower bound inferences without the presence of negated universal upper bound inferences.},
 	author = {Degano, Marco and Marty, Paul and Ramotowska, Sonia and Aloni, Maria and Breheny, Richard and Romoli, Jacopo and Sudo, Yasutada},
 	doi = {10.1007/s11050-024-09226-3},
