--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -3,28 +3,28 @@
 
 @inproceedings{Klochowiczetal2025,
   author = {Tomasz Klochowicz and Fabian Schlotterbeck and Oliver Bott and Sonia Ramotowska and Maria Aloni},
-booktitle = {Proceedings of CogSci 2025 (accepted)},
+booktitle = {Proceedings of CogSci 2025},
   title = {Neglect zero: evidence from priming across constructions},
   year = {2025},
-  slides = {},
+  notes = {Accepted},
 doi = { }
 }
 
 @inproceedings{Bottetal2024,
   author = {Oliver Bott and Fabian Schlotterbeck and Tomasz Klochowicz and Sonia Ramotowska and Maria Aloni},
-booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29   (accepted)},
+booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29},
   title = {Neglect-Zero Effects in the Interpretation of Quantifiers and Disjunction},
   year = {2024},
-  slides = {},
+  notes = {Accepted},
 doi = { }
 }
 
 @inproceedings{Yanal2024,
   author = {Jialiang Yan and Maria Aloni and Fenrong Liu},
-booktitle = {Proceedings of   AWPL 2024 (accepted)},
+booktitle = {Proceedings of   AWPL 2024},
   title = {Perspective Shifts: Formalizing Epistemic Might in Multi-agent Models.},
   year = {2024},
-  slides = {},
+  notes = {Accepted},
 doi = { }
 }
 
@@ -34,11 +34,9 @@ doi = { }
 	doi = { },
 	id = {Degano2025},
 	isbn = { },
-	journal = {Linguistics and Philosophy (accepted)},
-	title = {How to be (non-)specific},
- volume = { },
-  number = { },
-  pages = { }, 
+	journal = {Linguistics and Philosophy},
+	title = {How to be (non-)specific}, 
+notes = {Accepted},
 	year = {2025}
 	}
 
