--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -5,7 +5,7 @@
   author = {Tomasz Klochowicz and Fabian Schlotterbeck and Oliver Bott and Sonia Ramotowska and Maria Aloni},
 booktitle = {Proceedings of CogSci 2025},
   title = {Neglect zero: evidence from priming across constructions},
-  year = {2025},
+  year = {2025 (accepted)},
   notes = {Accepted},
 doi = { }
 }
@@ -14,7 +14,7 @@ doi = { }
   author = {Oliver Bott and Fabian Schlotterbeck and Tomasz Klochowicz and Sonia Ramotowska and Maria Aloni},
 booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29},
   title = {Neglect-Zero Effects in the Interpretation of Quantifiers and Disjunction},
-  year = {2024},
+  year = {2024 (accepted)},
   notes = {Accepted},
 doi = { }
 }
@@ -29,7 +29,7 @@ doi = { }
 }
 
 
-@article{DeganoAloni2025,  
+@unpublished{DeganoAloni2025,  
 	author = {Degano, Marco and  Aloni, Maria},
 	doi = { },
 	id = {Degano2025},
