--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -2,13 +2,19 @@
 ---
 
 @inproceedings{Klochowiczetal2025,
-abstract = {Recent studies use semantic structural priming to show that various cases of linguistic strengthening happen through a common mechanism: generation of implicatures through alternative-based (scalar) reasoning. In this paper, we used priming to investigate another group of cases, where strengthening is postulated to follow from the tendency to systematically neglect structures that verify a sentence by virtue of an empty configuration (neglect-zero): empty-set quantifiers ('at most/fewer than') and disjunction under a universal quantifier. We report data indicating semantic priming between these two structures, but not between them and scalar 'some'. We propose that 1. there is a common mechanism in use for strengthening constructions postulated to follow from the neglect-zero tendency, and that 2. this mechanism is different from the one involved in alternative-based reasoning.}
+abstract = {Recent studies use semantic structural priming to show that various cases of linguistic strengthening 
+happen through a common mechanism: generation of implicatures through alternative-based (scalar) reasoning. In this 
+paper, we used priming to investigate another group of cases, where strengthening is postulated to follow from the 
+tendency to systematically neglect structures that verify a sentence by virtue of an empty configuration (neglect-zero):
+empty-set quantifiers ('at most/fewer than') and disjunction under a universal quantifier. We report data indicating 
+semantic priming between these two structures, but not between them and scalar 'some'. We propose that 1. there is 
+a common mechanism in use for strengthening constructions postulated to follow from the neglect-zero tendency, and that 
+2. this mechanism is different from the one involved in alternative-based reasoning.}
   author = {Tomasz Klochowicz and Fabian Schlotterbeck and Oliver Bott and Sonia Ramotowska and Maria Aloni},
 booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society, 47},
   title = {Neglect zero: evidence from priming across constructions},
   year = {2025},
-  url = {https://escholarship.org/uc/item/36w6x7z9},
-doi = { }
+  doi = {https://escholarship.org/uc/item/36w6x7z9}
 }
 
 @inproceedings{Bottetal2024,
