--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -14,7 +14,8 @@ a common mechanism in use for strengthening constructions postulated to follow f
 booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society, 47},
   title = {Neglect zero: evidence from priming across constructions},
   year = {2025},
-  doi = {https://escholarship.org/uc/item/36w6x7z9}
+ external = {https://escholarship.org/uc/item/36w6x7z9},
+doi = { }
 }
 
 @inproceedings{Bottetal2024,
