--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -9,7 +9,7 @@ tendency to systematically neglect structures that verify a sentence by virtue o
 empty-set quantifiers ('at most/fewer than') and disjunction under a universal quantifier. We report data indicating 
 semantic priming between these two structures, but not between them and scalar 'some'. We propose that 1. there is 
 a common mechanism in use for strengthening constructions postulated to follow from the neglect-zero tendency, and that 
-2. this mechanism is different from the one involved in alternative-based reasoning.}
+2. this mechanism is different from the one involved in alternative-based reasoning.},
   author = {Tomasz Klochowicz and Fabian Schlotterbeck and Oliver Bott and Sonia Ramotowska and Maria Aloni},
 booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society, 47},
   title = {Neglect zero: evidence from priming across constructions},
