--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -14,8 +14,7 @@ a common mechanism in use for strengthening constructions postulated to follow f
 booktitle = {Proceedings of the Annual Meeting of the Cognitive Science Society, 47},
   title = {Neglect zero: evidence from priming across constructions},
   year = {2025},
- external = {https://escholarship.org/uc/item/36w6x7z9},
-doi = { }
+ external = {https://escholarship.org/uc/item/36w6x7z9}
 }
 
 @inproceedings{Bottetal2024,
@@ -23,8 +22,7 @@ doi = { }
 booktitle = {Proceedings of Sinn und Bedeutung (SuB) 29},
   title = {Neglect-Zero Effects in the Interpretation of Quantifiers and Disjunction},
   year = {2024},
-  notes = {Accepted},
-doi = { }
+  notes = {Accepted}
 }
 
 @inproceedings{Yanal2024,
@@ -32,14 +30,12 @@ doi = { }
 booktitle = {Proceedings of   AWPL 2024},
   title = {Perspective Shifts: Formalizing Epistemic Might in Multi-agent Models.},
   year = {2024},
-  notes = {Accepted},
-doi = { }
+  notes = {Accepted}
 }
 
 
 @article{DeganoAloni2025,  
 	author = {Degano, Marco and  Aloni, Maria},
-	doi = { },
 	id = {Degano2025},
 	journal = {Linguistics and Philosophy},
 	title = {How to be (non-)specific}, 
