--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -58,6 +58,7 @@ notes = {Accepted},
 	}
 	
 @article{Antilla2024,
+  abstract = {We study the mathematical properties of bilateral state-based modal logic (BSML), a modal logic employing state-based semantics (also known as team semantics), which has been used to account for free choice inferences and related linguistic phenomena. This logic extends classical modal logic with a nonemptiness atom which is true in a state if and only if the state is nonempty. We introduce two extensions of BSML and show that the extensions are expressively complete, and develop natural deduction axiomatizations for the three logics.},
 	author = {Maria Aloni and Aleksi Anttila and Fan Yang},
 journal =  {Notre Dame Journal of Formal Logic},
 	title = {State-based Modal Logics for Free Choice},
@@ -85,6 +86,7 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
 }
 
 @inproceedings{Aloni2022yx,
+  abstract = {The article presents a bilateral update semantics for epistemic modals which captures their discourse dynamics as well as their potential to give rise to fc inferences. The latter are derived as neglect-zero effects. Neglect-zero is a tendency in human cognition to disregard structures that verify sentences by virtue of an empty witness set. The upshot of modelling the neglect-zero tendency in a dynamic setting is a notion of dynamic logical consequence which makes interesting predictions concerning possible divergences between everyday and logico-mathematical reasoning.},
   author = {Aloni, Maria},
   booktitle = {Dynamics in Logic and Language},
   editor = {Dun Deng and Mingming Liu and Dag Westerstahl and Kaibo Xie},
@@ -98,6 +100,7 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
 }
 
 @article{AlonivOrmondt23,
+  abstract = {We present a number of puzzles arising for the interpretation of modified numerals. Following Büring and others we assume that the main difference between comparative and superlative modifiers is that only the latter convey disjunctive meanings. We further argue that the inference patterns triggered by disjunction and superlative modifiers are hard to capture in existing semantic and pragmatic analyses of these phenomena (neo-Gricean or grammatical alike), and we propose a novel account of these inferences in the framework of bilateral state-based modal logic defining a first order extension of Aloni's BSML.},
   author = {Maria Aloni and Peter van Ormondt},
   journal = {Journal of Logic, Language and Information},
   volume = {32},
@@ -144,6 +147,7 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
   slides = {AloniEtAl2019.pdf}
 }
 @article{AloniEtAl2022,
+  abstract = {Data involving epistemic modals suggest that some classically valid argument forms, such as reductio, are invalid in natural language reasoning as they lead to modal collapses. We adduce further data showing that the classical argument forms governing the existential quantifier are similarly defective, as they lead to a de re–de dicto collapse. We observe a similar problem for disjunction. But if the classical argument forms for negation, disjunction and existential quantification are invalid, what are the correct forms that govern the use of these items? Our diagnosis is that epistemic modals interfere with hypothetical reasoning. We present a modal first-order logic and model theory that characterizes hypothetical reasoning with epistemic modals in a principled manner. One upshot is a sound and complete natural deduction system for reasoning with epistemic modals in first-order logic.},
   author = {Maria Aloni and Luca Incurvati and Julian Schloeder},
   journal = {Erkenntnis},
   number = {},
