--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -70,6 +70,15 @@ journal =  {Notre Dame Journal of Formal Logic},
 }
 
 @inproceedings{AloniDegano2022y,
+  abstract = {Indefinites are known to give rise to different scopal (specific vs nonspecific) and epistemic (known vs unknown) uses.
+  Farkas & Brasoveanu (2020) explained these specificity distinctions in terms of stability vs. variability in value
+assignments of the variable introduced by the indefinite. Typological research
+(Haspelmath 1997) showed that indefinites have different functional distributions
+with respect to these uses. In this work, we present a formal framework where Farkas
+& Brasoveanu (2020)’s ideas are rigorously formalized. We develop a two-sorted
+team semantics which integrates both scope and epistemic effects. We apply the
+framework to explain typological variety of indefinites, their restricted distribution
+and licensing conditions, and some diachronic developments of indefinite forms.},
   author = {Maria Aloni and Marco Degano},
 booktitle = {Proceedings of Semantic and Linguistic Theory (SALT) 32, (Mexico City, 8-10 June 2022).},
   title = {(Non-)specificity across languages: constancy, variation, v-variation},
@@ -78,6 +87,14 @@ booktitle = {Proceedings of Semantic and Linguistic Theory (SALT) 32, (Mexico Ci
 }
 
 @inproceedings{PintonAloni2022,
+  abstract = {In this paper we study how different FC inferences are derived in cases of sluiced
+sentences that differ just by the verb embedding the sluice, improving on Fusco (2019). We
+propose to add a new economy condition to Rudin (2019) that is able to derive - together
+with other existing constraints - the desired sluices from certain syntactico-semantic properties
+(temporal orientation, (Condoravdi, 2001)) of embedding verbs. We then present an analysis in
+which the attested FC inferences are derived from the different sluices through the interplay of
+scopal parallelism (Chung et al., 1995; Fusco, 2019) and uniqueness presupposition of singular
+which clauses (Dayal, 1996).},
   author = {Lorenzo Pinton and Maria Aloni},
 booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 2022).},
   title = {You may like or dislike this talk, and we do care which: Sluicing and free choice},
@@ -121,6 +138,7 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
 
 
 @article{AloniSP2022,
+  abstract = {Free choice inferences represent a much discussed case of a divergence between logic and language (Kamp 1973, Zimmermann 2000). Grice influentially argued that the assumption that such divergence does in fact exist is a mistake originating “from inadequate attention to the nature and importance of the conditions governing conversation” (Grice 1989: 24). I will first show that when applied to free choice phenomena, the standard implementation of Grice’s view, representing semantics and pragmatics as two separate components, is empirically inadequate. I will then propose a different account: a bilateral state-based modal logic modelling next to literal meanings also pragmatic factors and the additional inferences that arise from their interaction. The pragmatic factor I will consider connects to a tendency of language users to neglect empty configurations when engaging in linguistic interpretation. The non-emptiness atom (ne) from team semantics provides a perspicuous way to formally represent this tendency and to rigorously study its impact on interpretation. In terms of ne, I will define a pragmatic enrichment function and show that, in interaction with disjunction occurring in positive contexts and only in these cases, pragmatic enrichment yields non-trivial effects including predicting free choice inferences and their cancellation under negation. The latter result relies on the adopted bilateralism, where each connective comes with an assertion and a rejection condition and negation is defined in terms of the latter notion.},
 	Author = {Aloni, Maria},
 	Title = {Logic and conversation: {The} case of free choice},
 	Journal = {Semantics and Pragmatics},
@@ -450,6 +468,7 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
 	year = {2018}
 }
 @article{DeganoAloni2021,
+  abstract = {Indefinites display a great functional variety and they give rise to different pragmatic effects. We focus on free choice indefinites and in particular on the Italian qualsiasi. Our aim is to reconstruct the grammaticalization path of this item and understand how diachronic data might shed some light on existing semantic theories of free choice. We employ corpus-based tools to build a database containing occurrences of qualsiasi from its origin and early forms to its current usage. We show that qualsiasi emerged from a particular unconditional construction and we outline the different stages which led to its grammaticalization. We analyze the compatibility of our diachronic study with formal accounts of free choice inferences, with a focus on Alternative Semantics analyses for indefinite pronouns and so-called grammatical theories of free choice. Our work shows that an integration between formal semantics and historical linguistics is fruitful and worth pursuing.},
 	author = {Marco Degano and Maria Aloni},
 	journal = {Natural Language & Linguistic Theory},
 volume = {40},
