--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -130,6 +130,24 @@ booktitle = {Proceedings of Sinn und Bedeutung (SuB) 27,  (Prague, September 202
 
 
 @unpublished{AloniPort21,
+  abstract = {The article investigates the diachronic development of irgend-indefinites in the German language. 
+Most scholars assume that the particle irgend emerged from the Old High German form io-wergin with a locative meaning
+similar to anywhere/somewhere. We present the result of corpus studies covering Middle High German, Early New High German and Present Day German.
+In view of our findings, we conjecture four stages in the development of irgend
+from a locative particle to a modifier of an indefinite: (Phase 1) in Old High
+German till Early Middle High German the particle irgend is a non-specific
+existential expression with a locative meaning; (Phase 2) in Classical Middle
+High German the particle is still a non-specific existential, but is no longer
+necessarily locative; (Phase 3) in Early New High German the first indefinite
+modifier uses emerge expressing semantic variation; in this process the particle
+loses its existential force and keeps only non-specificity (semantic variation)
+as its lexical contribution; (Phase 4) the indefinite modifier acquires new functions and establishes
+its current wide distribution, which includes semantic
+variation (non-specificity) as well as pragmatic variation (ignorance effect).
+The article aims to offer some insights on how an indefinite emerges and extends
+its use to new functions and which steps might be necessary for such an
+extension of use. We conjecture that some bleaching in the lexical contribution
+of irgend took place during this development.},
   author = {Angelica Port and Maria Aloni},
   note = {Manuscript, ILLC, University of Amsterdam},
   title = {The diachronic development of German \emph{Irgend}-Indefinites},
@@ -646,6 +664,14 @@ inproceedings{Aloni2015a,
   slides = {Aloni2015.pdf}
 }
 @incollection{Aloni2021a,
+  abstract = {The article discusses theoretical repercussions of a number of diachronic corpus studies
+establishing the patters of development of marked indefinites across languages (AguilarGuevara et al. 2012).
+The focus is on the case of wh-based free choice (fc) indefinites.
+After summarising the key results of two studies on the historical development of Spanish
+cualquiera and Dutch wie dan ook, we present a semantic analysis of the diachronic phases
+of these two fc indefinites demonstrating how historical data provide additional support
+for the abstract operators posited by analyses in Alternative Semantics style (Kratzer and
+Shimoyama 2002, Aloni 2007, Menendez-Benito 2010).},
   author = {Maria Aloni},
   title = {Indefinites as fossils: the case of wh-based free choice},
   booktitle = {Determiners and quantifiers: functions, variation, and change},
