--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -267,6 +267,15 @@
 }
 
 @incollection{Aloni2016a,
+  abstract = {
+  This article proposes an account of knowing-who constructions within a
+  generalisation of Hintikka’s (1962) quantified epistemic logic employing the notion
+  of a conceptual cover (Aloni, 2001). The proposed logical system captures the inherent context-sensitivity of
+  knowing-wh constructions (Boer and Lycan, 1985), as well as expresses non-trivial cases of so-called concealed questions (Heim, 1979).
+  Assuming that quantifying into epistemic contexts and knowing-who are linked in the way Hintikka had proposed, the context dependence
+  of the latter will translate into a context dependence of de re attitude ascriptions and this will result in a ready account of a number
+  of traditionally problematic cases including Quine’s well-known double vision puzzles (Quine, 1956).
+  },
   author    = {Aloni, Maria},
   booktitle = {Jaakko Hintikka on Knowledge and Game Theoretical Semantics},
   publisher = {Springer},
@@ -583,6 +592,21 @@
 }
 
 @article{TheilerEtAl2018,
+  abstract = {
+  This paper proposes a semantics for declarative and interrogative complements
+  and for so-called responsive verbs, like know and forget, which embed both kinds of
+  complements. Following Groenendijk & Stokhof (1984), we pursue a uniform account
+  in the sense that we take both kinds of complements to be of the same semantic
+  type and we assume a single lexical entry for each responsive verb. This approach
+  avoids a number of problems for non-uniform theories, such as the reductive theories
+  of Karttunen (1977), Heim (1994), Lahiri (2002), Spector & Egré (2015), among
+  others, and the twin relations theory of George (2011).
+  On the other hand, our account also addresses the main limitation of Groenendijk
+  & Stokhof’s (1984) proposal, which is that it is primarily designed to derive strongly
+  exhaustive readings for interrogative complements. Our account is more flexible in
+  that it straightforwardly derives non-exhaustive and intermediate exhaustive readings
+  as well.
+  },
   author = {Theiler, Nadine and Roelofsen, Floris and Aloni, Maria},
   doi = {10.1093/jos/ffy003},
   journal = {Journal of Semantics},
@@ -626,6 +650,13 @@
 }
 
 @article{Aloni2016Grazer,
+  abstract = {
+  The article discusses the interpretation of indexicals within the framework of quantified modal logic. The dominant theory on this topic is
+  Kaplan’s two-dimensional analysis. Since its appearance in 1977, Kaplan’s analysis has been challenged on various grounds. I will argue that
+  by revising the way of modelling the objects we refer to in conversation,
+  we can account for counterexamples to Kaplan’s theory, while maintaining
+  Kaplan’s basic insights concerning the meaning of 'you' and 'I'.
+  },
   author = {Maria Aloni},
   journal = {Grazer Philosophische Studien},
   number = {3},
