--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -263,6 +263,7 @@
   series = {LNCS},
   title = {FC disjunction in a state-based semantics},
   year = {2016},
+doi = {10.1007/978-3-662-53826-5}
   slides = {fc_disjunction.pdf}
 }
 
