--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -263,7 +263,7 @@
   series = {LNCS},
   title = {FC disjunction in a state-based semantics},
   year = {2016},
-doi = {10.1007/978-3-662-53826-5},
+  doi = {10.1007/978-3-662-53826-5},
   slides = {fc_disjunction.pdf}
 }
 
@@ -289,6 +289,15 @@ doi = {10.1007/978-3-662-53826-5},
 }
 
 @incollection{AloniPort2015,
+  abstract = {
+  The chapter proposes an account of epistemic indefinites cross-linguistically, focusing on the case of German irgendein
+  and Italian un qualche. Four main functions for EIs are identified initially: specific unknown (SU); epistemic unknown (epiU);
+  negative polarity (NPI); and the deontic free choice (deoFC). It is subsequently observed that while irgendein qualifies for
+  all functions, un qualche qualifies only for the first two. The second part of the chapter proposes an account of these data in
+  the framework of a Dynamic Semantics with Conceptual Covers. Our point of departure is the assumption that epistemic indefinites
+  are existentials with two additional characteristics: (i) they induce an obligatory domain shift and (ii) they are felicitous only
+  if such a shift is for a reason.
+  },
   author = {Aloni, Maria and Port, Angelika},
   booktitle = {Epistemic Indefinites},
   editor = {Alonso-Ovalle, Luis and Menendez-Benito, Paula},
@@ -390,6 +399,12 @@ doi = {10.1007/978-3-662-53826-5},
 }
 
 @article{AloniRoelofsen2014,
+  abstract = {
+  The goal of this paper is to explain the meaning and distribution of indefinites in comparatives, focusing on English some and any
+  and German irgend-indefinites. We consider three competing theories of comparatives in combination with an alternative semantics of
+  some and any, and a novel account of stressed irgend-indefinites. One of the resulting accounts, based on Heim’s analysis of comparatives,
+  predicts all the relevant differences in quantificational force, and explains why free choice indefinites are licensed in comparatives.
+  },
   author = {Aloni, Maria and Roelofsen, Floris},
   journal = {Natural Language Semantics},
   pages = {145-167},
@@ -748,6 +763,9 @@ inproceedings{Aloni2018a,
 }
 
 @incollection{AloniJacinto2014,
+  abstract = {
+  In this article we investigate how conceptual perspectives and context interact in the determination of the truth of sentences in which ‘knowing-wh’ constructions occur.
+  },
   author = {Maria Aloni and Bruno Jacinto},
   title = {Knowing who: How perspectives and context interact},
   booktitle = {Epistemology, Context and Formalism},
