--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -319,6 +319,13 @@
 }
 
 @incollection{AloniCiardelli2013,
+  abstract = {
+  Since Ross’s observation that the instruction 'Post this letter' does not entail 'Post this
+  letter or burn it', imperatives have constituted a challenge for the logician. Building on ideas
+  from inquisitive semantics, we propose an account in which imperatives are regarded as
+  partial specifications of a set of options. We show that this account avoids Ross’s paradox
+  and gives rise to a sensible notion of imperative entailment.
+  },
   author = {Aloni, Maria and Ciardelli, Ivano},
   booktitle = {The dynamic, inquisitive, and visionary life of $\phi$, $?\phi$, and $\diamondsuit\phi$},
   editor = {Aloni, Maria and Franke, Michael and Roelofsen, Floris},
@@ -329,6 +336,11 @@
 }
 
 @article{AloniEtAl2013,
+  abstract = {
+  The paper examines the logic and semantics of knowledge attributions of the form “s knows whether A or B”. 
+  We analyze these constructions in an epistemic logic with alternative questions, and propose an account of 
+  the context-sensitivity of the corresponding sentences and of their presuppositions.
+  },
   author = {Aloni, Maria and \'Egr\'e, Paul and de Jager, Tikitu},
   journal = {Synthese},
   number = {4},
