--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -365,6 +365,16 @@
 }
 
 @inproceedings{AloniEtAl2012,
+  abstract = {
+  Natural languages possess a wealth of indefinite forms that typically differ in distribution and interpretation. Although formal
+  semanticists have strived to develop precise meaning representations for different indefinite functions, to date there has hardly been
+  any corpus work on the topic. In this paper, we present the results of a small corpus study where English indefinite forms any and
+  some were labelled with fine-grained semantic functions well-motivated by typological studies. We developed annotation guidelines
+  that could be used by non-expert annotators and calculated inter-annotator agreement amongst several coders. The results show that
+  the annotation task is hard, with agreement scores ranging from 52% to 62% depending on the number of functions considered,
+  but also that each of the independent annotations is in accordance with theoretical predictions regarding the possible distributions
+  of indefinite functions. The resulting annotated corpus is available upon request and can be accessed through a searchable online database.
+  },
   author = {Maria Aloni and Andreas van Cranenburgh and Raquel Fernandez and Marta Sznajder},
   title = {Building a Corpus of Indefinite Uses Annotated with Fine-grained Semantic Functions},
   booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
@@ -381,6 +391,15 @@
 }
 
 @inproceedings{AguilarEtAl2011c,
+  abstract = {
+  The article discusses the methodology adopted for a cross-linguistic synchronic and diachronic corpus
+  study on indefinites. The study covered five indefinite expressions, each in a different language. The
+  main goal of the study was to verify the distribution of these indefinites synchronically and to attest
+  their historical development. The methodology we used is a form of functional labeling which combines both context
+  (syntax) and meaning (semantics) using as a starting point Haspelmath’s (1997) functional map. In the article we identify
+  Haspelmath’s functions with logico-semantic interpretations and propose a binary branching decision tree assigning each
+  instance of an indefinite exactly one function in the map.
+  },
   author = {Aguilar-Guevara, Ana and Aloni, Maria and Port, Angelika and \v{S}im\'{i}k, R. and de Vos, M. and Zeijlstra, H.},
   title = {Semantics and pragmatics of indefinites: methodology for a synchronic and diachronic corpus study},
   booktitle = {Proceedings of the DGfS Workshop ''Beyond Semantics: corpus-based investigations of pragmatic and discourse phenomena''},
@@ -391,6 +410,14 @@
 }
 
 @article{AloniRoelofsen2011,
+  abstract = {
+    Concealed questions are determiner phrases that are naturally paraphrased as embedded questions (e.g., 'John knows the capital of Italy' ≈ 
+   'John knows what the capital of Italy is'). This paper offers a novel account of the interpretation of concealed questions, which assumes
+    that an entity-denoting expression α may be type-shifted into an expression ?z.P(α), where P is a contextually determined property, 
+    and z ranges over a contextually determined domain of individual concepts. Different resolutions of P and the domain of z yield a
+    wide range of concealed question interpretations, some of which were not noted previously. On the other hand, principled constraints
+    on the resolution process prevent overgeneration.
+  },
   author = {Aloni, Maria and Roelofsen, Floris},
   journal = {Linguistics and Philosophy},
   number = {5},
@@ -403,6 +430,15 @@
 }
 
 @inproceedings{AloniRoelofsen2011a,
+  abstract = {
+  The goal of this paper is to explain the meaning and distribution of
+  indefinites in comparatives, focusing on the case of English some and any and
+  German irgend-indefinites. We combine three competing theories of comparatives
+  with an alternative semantics of some and any, and a novel account of stressed
+  irgend-indefinites. One of the resulting theories, based on Heim's (2006) analysis
+  of comparatives, predicts all the relevant differences in quantificational force, and
+  explains why free choice indefinites are licensed in comparatives.
+  },
   author = {Aloni, Maria and Roelofsen, Floris},
   booktitle = {Proceedings of SALT 21},
   title = {Indefinites in comparatives},
@@ -696,6 +732,13 @@
 }
 
 @article{FrankeAloni2012,
+  abstract = {
+  This squib gives a critical review of the monograph entitled Conflicts in Interpretation (Hendriks et al., 2010) written by 
+  Petra Hendriks, Helen de Hoop, Irene Krämer, Henriette de Swart and Joost Zwarts, which was published in 2010 by
+  Equinox Publishing, London. After sketching the relevant background of optimality theoretic approaches to semantics and pragmatics,
+  we give a detailed summary of the contents of this book, discuss its merits and mention a few critical issues
+  that, we feel, future research in this tradition may wish to adress more carefully
+  },
   author  = {Michael Franke and Maria Aloni},
   journal = {Journal of Cognitive Science},
   title   = {Conflicts in Interpretation - A Critical Review},
