--- a/content/aloni.bib
+++ b/content/aloni.bib
@@ -471,6 +471,17 @@
 }
 
 @article{Aloni2008,
+  abstract = {
+  Our evaluation of questions and knowledge attributions may vary relative to
+  the way in which the relevant objects are identified. In the first part, the article
+  proposes a theory that represents different methods of trans-world identification
+  and is able to account for their impact on interpretation. In the second part,
+  the same theory is used to account for the meaning of concealed questions. On
+  the proposed account, the interpretation of a concealed question results from
+  the application of a type-shifting operation mapping an individual denoting
+  expression into an identity question interpreted relative to a contextually selected
+  identification method.
+  },
   author = {Aloni, Maria},
   journal = {Grazer Philosophische Studien},
   note = {Special issue on 'Knowledge and Questions' edited by Franck Lihoreau},
@@ -500,6 +511,17 @@
 }
 
 @incollection{Aloni2007a,
+  abstract = {
+  The article presents a formal analysis in the framework of bi-directional optimality theory of the free choice,
+  ignorance and indifference implicatures conveyed by the use of indefinite expressions or disjunctions. Ignorance
+  is expressed by standard means of epistemic logic. To express indifference we use Groenendijk and Stokhof’s question
+  meanings. To derive implicature, Grice’s conversational maxims, and an additional principle expressing preferences
+  for minimal models, are formulated as violable constraints used to select optimal candidates out of a set of alternative
+  sentence-context pairs. The implicatures of an utterance of φ are then defined as the sentences which are entailed by any
+  optimal context for φ (but not by φ itself). Entailment is defined in a version of update semantics where contextual
+  updates are derived by competition among contexts. Free choice and other modal implicatures of disjunctions and indefinites
+  will follow, but also scalar implicatures and exhaustification.
+  },
   author = {Aloni, Maria},
   booktitle = {Proceedings of the Sixth International Tbilisi Symposium on Language, Logic and Computation},
   editor = {ten Cate, B. and Zeevat, H.},
@@ -510,6 +532,13 @@
 }
 
 @article{Aloni2007c,
+  abstract = {
+  The article proposes an analysis of imperatives and possibility and necessity statements that (i) explains their differences
+  with respect to the licensing of free choice any and (ii) accounts for the related phenomena of free choice disjunction in
+  imperatives, permissions, and statements. Any and or are analyzed as operators introducing sets of alternative propositions.
+  Free choice licensing operators are treated as quantifiers over these sets. In this way their interpretation can be sensitive
+  to the alternatives any and or introduce in their scope.
+  },
   author = {Aloni, Maria},
   journal = {Natural Language Semantics},
   pages = {65-94},
@@ -520,6 +549,16 @@
 }
 
 @incollection{AloniEtAl2007,
+  abstract = {
+  A dynamic view on meanings as context change potentials provides a substantial account of the dependence of focused answers
+  on the context set up by their preceding questions. Questions pose conditions on the focal structure of their answers and
+  can further restrict the domain of subsequent focusing operators like only. Standard analyses of focus define congruence in
+  terms of identity between the question meaning and the focal alternatives of the answer. Most existing dynamic analyses of
+  questions have been developed in the tradition of the partition theory of Groenendijk and Stokhof. This chapter presents update
+  semantics of questions and focuses building on Gawron's dynamic model of domain restriction. It describes how dynamic analysis
+  gives an interesting characterization of the notion of discourse congruence which covers contextual restrictions. Finally, the
+  chapter explains how questions can restrict the domain of quantificational sentences used later in a discourse within dynamic semantics.
+  },
   author = {Aloni, Maria and Beaver, David and Clark, Brady and van Rooij, Robert},
   booktitle = {Questions in Dynamic Semantics},
   editor = {Aloni, Maria and Dekker, Paul and Butler, Alastair},
@@ -531,6 +570,22 @@
 }
 
 @incollection{DekkerEtAl2007,
+  abstract = {
+  With this introduction we aim to give a sketch of the research area
+  in which questions are studied from the perspective of a semanticist,
+  a formal linguist interested in the notion of 'meaning'. We start with
+  explaining some general notions and insights in this area, and then
+  zoom in on one of the most influential theories about questions, the
+  partition theory of Groenendijk and Stokhof (section 1.1). In section
+  1.2 we concisely discuss some alternatives to the partition semantics,
+  and some current issues in the debate about the meanings of questions,
+  which will also pop up every now and then in the contributions to
+  this volume. Then, in section 1.3, we have a thematic discussion of the
+  contributions to this volume themselves, considering them one by one
+  and in relation to each other. We end (section 1.4) with a sketch of
+  some issues which, we think, still abide or have arisen from this volume
+  as a whole.
+  },
   author = {Dekker, Paul and Aloni, Maria and Butler, Alastair},
   booktitle = {Questions in Dynamic Semantics},
   editor = {Aloni, Maria and Dekker, Paul and Butler, Alastair},
@@ -542,6 +597,16 @@
 }
 
 @incollection{AloniRooij2007,
+  abstract = {
+  Extending the proposal made by Schulz (2003), we put forward a pragmatic
+  account of the meaning of existential and universal FC items, where the 'ignorance or
+  indifference' inference triggered by the former and the 'universal' inference triggered
+  by the latter are treated as implicatures obtained by standard gricean reasoning
+  formalized in terms of the two operations grice and competence. On this account,
+  the implicatures of a sentence are generated with respect to a number of relevant
+  alternatives. The difference between existential and universal FCs is due only to
+  the choice of these alternatives.
+  },
   author    = {Aloni, Maria and van Rooij, Robert},
   booktitle = {Cognitive Foundations of Interpretation},
   title     = {Free choice items and alternatives},
@@ -748,6 +813,15 @@
 }
 
 @article{AloniEgre2010,
+  abstract = {
+  We discuss the ‘problem of convergent knowledge’, an argument presented by J. Schaffer in favour of contextualism about
+  knowledge attributions, and against the idea that knowledge‐wh can be simply reduced to knowledge of the proposition answering
+  the question. Schaffer's argument centrally involves alternative questions of the form 'whether A or B'. We propose an analysis
+  of these on which the problem of convergent knowledge does not arise. While alternative questions can contextually restrict the
+  possibilities relevant for knowledge attributions, what Schaffer's puzzle reveals is a pragmatic ambiguity in what 'knowing the answer'
+  means: in his problematic cases, the subject knows only a partial answer to the question. This partial knowledge can be counted as
+  adequate only on externalist grounds.
+  },
   author = {Maria Aloni and Paul \'Egr\'e},
   doi = {10.1111/j.1467-9213.2008.606.x},
   journal = {The Philosophical Quarterly},
@@ -976,6 +1050,16 @@ inproceedings{Aloni2015a,
 }
 
 @book{AloniEtAl2007d,
+  abstract = {
+  The study of questions and answers is challenging for various fields of theoretical linguistics,
+  logic, analytical philosophy, and more recently computer science. Research into questions and answers addresses
+  old and raises new and important questions about the semantics / pragmatics interface and about the dynamics of
+  interpretation. This book brings together current work on the topic as it has been developed in Amsterdam,
+  and congenial academic sites, over the past 15 years. Amsterdam is one of the breeding grounds for the formal study
+  of logic and language, for dynamic semantics, and for the study of questions and answers. It covers the major issues
+  of pragmatic/semantic investigation, including logical relations, context dependence, information structure, and more.
+  It illustrates how semantic/pragmatic stance can be used for problems in other areas of linguistic theorising.
+  },
   editor = {Maria Aloni and Paul Dekker and Alaistair Butler},
   publisher = {Brill},
   series = {CRiSPI},
